Add database connection

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 LINE_CHANNEL_ACCESS_TOKEN=你的LINE金鑰
 LINE_CHANNEL_SECRET=你的LINE密鑰
 OPENAI_API_KEY=你的OpenAI金鑰
+DB_HOST=DB_HOST
+DB_PORT=DB_PORT
+DB_NAME=DB_NAME
+DB_USER=DB_USER
+DB_PASSWORD=DB_PASSWORD
